[package]
name = "drogue-event-source"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
base64 = "0.13"
cloudevents-sdk = { version = "0.4", features = ["rdkafka", "reqwest" ] }
config = "0.12"
dotenv = "0.15.0"
env_logger = "0.9"
futures-util = "0.3"
humantime-serde = "1"
log = "0.4"
oauth2 = "4.1.0"
rdkafka = "0.28"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }

[dev-dependencies]
maplit = "1"

[patch.crates-io]
cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust", rev = "5a9f64868dd8d2142f1e699da0d60f0601299b0b" } # FIXME: awaiting release